bk_ida/gccida/g0/rest_of_compilation
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:2908:15: error: use of undeclared identifier 'TV_REST_OF_COMPILATION_0'; did you mean 'TV_REST_OF_COMPILATION'?
timevar_push( TV_REST_OF_COMPILATION_0); 
              ^~~~~~~~~~~~~~~~~~~~~~~~
              TV_REST_OF_COMPILATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:89:13: note: 'TV_REST_OF_COMPILATION' declared here
DEFTIMEVAR (TV_REST_OF_COMPILATION   , "rest of compilation")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:2931:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:2933:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:2995:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:2997:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3030:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3035:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3040:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3045:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3054:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3070:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3079:15: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_push( TV_TO_SSA_0); 
              ^~~~~~~~~~~
              TV_TO_SSA
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3087:14: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_pop( TV_TO_SSA_0); 
             ^~~~~~~~~~~
             TV_TO_SSA
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3090:15: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_push( TV_SSA_CCP_0); 
              ^~~~~~~~~~~~
              TV_SSA_CCP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3095:14: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_pop( TV_SSA_CCP_0); 
             ^~~~~~~~~~~~
             TV_SSA_CCP
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3099:15: error: use of undeclared identifier 'TV_SSA_DCE_0'; did you mean 'TV_SSA_DCE'?
timevar_push( TV_SSA_DCE_0); 
              ^~~~~~~~~~~~
              TV_SSA_DCE
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:83:13: note: 'TV_SSA_DCE' declared here
DEFTIMEVAR (TV_SSA_DCE               , "SSA aggressive DCE")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3104:14: error: use of undeclared identifier 'TV_SSA_DCE_0'; did you mean 'TV_SSA_DCE'?
timevar_pop( TV_SSA_DCE_0); 
             ^~~~~~~~~~~~
             TV_SSA_DCE
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:83:13: note: 'TV_SSA_DCE' declared here
DEFTIMEVAR (TV_SSA_DCE               , "SSA aggressive DCE")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3106:15: error: use of undeclared identifier 'TV_FROM_SSA_0'; did you mean 'TV_FROM_SSA'?
timevar_push( TV_FROM_SSA_0); 
              ^~~~~~~~~~~~~
              TV_FROM_SSA
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:84:13: note: 'TV_FROM_SSA' declared here
DEFTIMEVAR (TV_FROM_SSA              , "convert from SSA")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/toplev.c:3112:14: error: use of undeclared identifier 'TV_FROM_SSA_0'; did you mean 'TV_FROM_SSA'?
timevar_pop( TV_FROM_SSA_0); 
             ^~~~~~~~~~~~~
             TV_FROM_SSA
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/timevar.def:84:13: note: 'TV_FROM_SSA' declared here
DEFTIMEVAR (TV_FROM_SSA              , "convert from SSA")
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rest_of_compilation/src/obj/toplev.o] Error 1
